src/pydjinni/generator/objc/it/swift/error/expected/include/objc/ErrorTestSwift.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni

#import <Foundation/Foundation.h>
//! Project version number for bridgingheader.
FOUNDATION_EXPORT double bridgingheaderVersionNumber;

//! Project version string for bridgingheader.
FOUNDATION_EXPORT const unsigned char bridgingheaderVersionString[];

#import "TSTFooError.h"
#import "TSTHelper.h"
#import "TSTThrowingCallback.h"
#import "TSTAsyncThrowingCallback.h"
#import "TSTBarError.h"
